--- a/event.html
+++ b/event.html
@@ -2,113 +2,204 @@
 <html lang="en">
 
 <head>
-    <title>Manage Your Events</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/baseCSS.css">
-    <link rel="stylesheet" href="css/event.css">
+    <title>Treasure Web - Home</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 
 <body>
-    <nav>
-        <input type="checkbox" id="check">
-        <label for="check" class="checkbtn">
-            <i class="fas fa-bars"></i>
-        </label>
-        <label class="logo">[WEBSITE LOGO]</label>
-        <ul>
-            <li>
-                <a href="homepage.html">HOME</a>
+    <!-- Start of Nav Bar -->
+    <nav class="navbar fixed-top navbar-expand-md navbar-dark bg-dark">
+        <div class="container">
+            <div style=" width: 55px; height: 50px;  overflow: hidden;  ">
+                <img src="img/SVG/Artboard 1.svg" alt="" style=" object-fit:fill; width: 60px;">
+            </div>
+            <a href="#" class="navbar-brand text-uppercase">Treasure Web</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+            <div class="collapse navbar-collapse" id="navbarToggler">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="event.html" class="nav-link active">Events <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="rules.html" class="nav-link">Rules</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="profile.html" class="nav-link">Profile</a>
+                    </li>
+                    <li class="specialDropdown nav-item dropdown d-md-none">
+                        <a class="nav-link dropdown-toggle active" href="#" id="utilitiesDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Login/Signup
+                        </a>
+                        <div class="dropdown-menu mb-2 " aria-labelledby="utilitiesDropdown">
+                            <a class="dropdown-item" href="#">Login</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">New around here? Sign up</a>
+                            <a class="dropdown-item" href="#">Forgot password?</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="dropdown mb-2 d-none d-md-inline pt-2">
+                <button class="btn btn-outline-light btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Login/Signup
+                    </button>
+                <div class="dropdown-menu dropdown-menu-right">
+                    <a class="dropdown-item" href="#">Login</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">New around here? Sign up</a>
+                    <a class="dropdown-item" href="#">Forgot password?</a>
+                </div>
+            </div>
+        </div>
+        </div>
+    </nav>
+    <!-- End of Nav Bar -->
+
+    <!-- Start of Content -->
+    <div class="container-fluid p-0">
+        <section id="headingCover">
+            <div class="d-flex align-items-center justify-content-center text-light aw-vertical-align">
+                <h1 class="aw-border text-center " style="font-size:xx-large">Let The Hunt Begin!</h1>
+            </div>
+        </section>
+
+        <div class="container">
+            <h1 style="font-size: 4rem;" class="text-center">
+                Events
+            </h1>
+            <div class="aw-hr-long mb-3"></div>
+            <div class="row">
+                <div class="mb-3 col-md-6 col-lg-4 ">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Event Title</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">Organizer Name</h6>
+                            <div class="dropdown-divider"></div>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="card-link">Details</a>
+                            <a href="#" class="card-link">Join Event</a>
+
+                        </div>
+                    </div>
+                </div>
+                <div class=" mb-3 col-md-6 col-lg-4 ">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Event Title</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">Organizer Name</h6>
+                            <div class="dropdown-divider"></div>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="card-link">Details</a>
+                            <a href="#" class="card-link">Join Event</a>
+
+                        </div>
+                    </div>
+                </div>
+                <div class=" mb-3 col-md-6 col-lg-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Event Title</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">Organizer Name</h6>
+                            <div class="dropdown-divider"></div>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="card-link">Details</a>
+                            <a href="#" class="card-link">Join Event</a>
+
+                        </div>
+                    </div>
+                </div>
+                <div class=" mb-3 col-md-6 col-lg-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Event Title</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">Organizer Name</h6>
+                            <div class="dropdown-divider"></div>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="card-link">Details</a>
+                            <a href="#" class="card-link">Join Event</a>
+
+                        </div>
+                    </div>
+                </div>
+                <div class=" mb-3 col-md-6 col-lg-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Event Title</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">Organizer Name</h6>
+                            <div class="dropdown-divider"></div>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="card-link">Details</a>
+                            <a href="#" class="card-link">Join Event</a>
+
+                        </div>
+                    </div>
+                </div>
+                <div class=" mb-3 col-md-6 col-lg-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Event Title</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">Organizer Name</h6>
+                            <div class="dropdown-divider"></div>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="card-link">Details</a>
+                            <a href="#" class="card-link">Join Event</a>
+
+                        </div>
+                    </div>
+                </div>
+                <div class=" mb-3 col-md-6 col-lg-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Event Title</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">Organizer Name</h6>
+                            <div class="dropdown-divider"></div>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="card-link">Details</a>
+                            <a href="#" class="card-link">Join Event</a>
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+
+
+    </div>
+
+    <!-- End of Content -->
+
+
+
+
+    <!-- Start of Footer -->
+    <footer class="bg-light p-3 pt-5 mt-0 ">
+        <ul class="list-inline text-uppercase text-center ">
+            <li class="list-inline-item mx-3 ">
+                <a href="Rules.html " class="text-danger ">Rules</a>
             </li>
-            <li>
-                <a href="#">NOTIFICATION</a>
-            </li>
-            <li>
-                <a href="event.html">EVENTS</a>
-            </li>
-            <li>
-                <a href="rules.html">rules</a>
-            </li>
-            <li>
-                <a href="ourTeam.html">Our Team</a>
-            </li>
-            <li>
-                <a href="userProfile.html">PROFILE</a>
-            </li>
-            <li>
-                <a class="active" href="#">LOGOUT</a>
-            </li>
-            <li>
-                <a class="active" href="login.html">LOG IN</a>
+            <li class="list-inline-item mx-3 ">
+                <a href="events.html " class="text-danger ">Events</a>
             </li>
         </ul>
-    </nav>
-    <main>
-        <div class="container" id="list">
-            <h3>Upcoming games</h3>
-            <p>Click the name of the game for more information.</p>
-            <table>
-                <tr>
-                    <td id="Name"><a href="#">Game1</a></td>
-                    <td><a href="#edit" title="Game1" onclick="update(this.title);">Edit</a></td>
-                    <td><button type="button">Delete</button></td>
-                </tr>
-                <tr>
-                    <td id="Name"><a href="#">Game2</a></td>
-                    <td><a href="#edit" title="Game2" onclick="update(this.title);">Edit</a></td>
-                    <td><button type="button">Delete</button></td>
-                </tr>
-                <tr>
-                    <td id="Name"><a href="#">Game3</a></td>
-                    <td><a href="#edit" title="Game3" onclick="update(this.title);">Edit</a></td>
-                    <td><button type="button">Delete</button></td>
-                </tr>
-                <tr>
-                    <td id="Name"><a href="#">Game4</a></td>
-                    <td><a href="#edit" title="Game4" onclick="update(this.title);">Edit</a></td>
-                    <td><button type="button">Delete</button></td>
-                </tr>
-                <tr>
-                    <td id="Name"><a href="#">Game5</a></td>
-                    <td><a href="#edit" title="Game5" onclick="update(this.title);">Edit</a></td>
-                    <td><button type="button">Delete</button></td>
-                </tr>
-                <tr>
-                    <td id="Name"><a href="#">Game6</a></td>
-                    <td><a href="#edit" title="Game6" onclick="update(this.title);">Edit</a></td>
-                    <td><button type="button">Delete</button></td>
-                </tr>
-            </table>
-        </div>
-        <div class="container" id="create">
-            <h4>Add a New Game</h4>
-            <p>Didn't find your game? Create one!</p>
-            <form id="addForm" action="/gamelist" method="post">
-                <div><label for="gameName">Name of your game:</label><br><input type="text" required></div>
-                <div><label for="gameDate">Date:</label><br><input type="date" id="today" required></div>
-                <div><label for="gameTime">Time:</label><br><input type="time" required></div>
-                <div><label for="teamNo">Number of teams:</label><br><input type="number" min="2" value="2" required>
-                </div>
-                <div><label for="partNo">Number of participants per team:</label><br><input type="number" min="2" value="2" required></div>
-                <div><input type="submit" id="addGame" value="Add a new game"></div>
-            </form>
-        </div>
-        <div class="container" id="edit">
-            <h4>Edit your game</h4>
-            <p>Do you want to edit your game? Enter the information you wish to change.</p>
-            <form id="editForm" action="/gamelist" method="post">
-                <div><label for="gameName">Name of your game:</label><br><input type="text" id="editGameName"></div>
-                <div><label for="gameDate">Date:</label><br><input type="date" id="editGameDate"></div>
-                <div><label for="gameTime">Time:</label><br><input type="time" id="editGameTime"></div>
-                <div><label for="teamNo">Number of teams:</label><br><input type="number" min="2" value="2" id="editGameTeam"></div>
-                <div><label for="partNo">Number of participants per team:</label><br><input type="number" min="2" value="2" id="editGamePart"></div>
-                <div><input type="submit" id="change" value="Change the information"></div>
-            </form>
-        </div>
-    </main>
-    <script src="js/event.js"></script>
+
+    </footer>
+    <!-- End of Footer -->
+
+    <!-- JS Scripts -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 
 </html>
