--- a/login.html
+++ b/login.html
@@ -2,62 +2,83 @@
 <html lang="en">
 
 <head>
-    <title>Login</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-    <link rel="stylesheet " href="css/baseCSS.css " />
-    <link rel="stylesheet " href="css/loginCSS.css " />
+    <title>Treasure Web - Home</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/login.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 
 <body>
-    <nav>
-        <input type="checkbox" id="check">
-        <label for="check" class="checkbtn">
-            <i class="fas fa-bars"></i>
-        </label>
-        <label class="logo">[WEBSITE LOGO]</label>
-        <ul>
-            <li>
-                <a href="homepage.html">HOME</a>
-            </li>
-            <li>
-                <a href="#">NOTIFICATION</a>
-            </li>
-            <li>
-                <a href="event.html">EVENTS</a>
-            </li>
-            <li>
-                <a href="rules.html">rules</a>
-            </li>
-            <li>
-                <a href="ourTeam.html">Our Team</a>
-            </li>
-            <li>
-                <a href="userProfile.html">PROFILE</a>
-            </li>
-            <li>
-                <a class="active" href="#">LOGOUT</a>
-            </li>
-            <li>
-                <a class="active" href="login.html">LOG IN</a>
-            </li>
-        </ul>
+    <!-- Start of Nav Bar -->
+    <nav class="navbar fixed-top navbar-expand-md navbar-dark bg-dark">
+        <div class="container">
+            <div style=" width: 55px; height: 50px;  overflow: hidden;  ">
+                <img src="img/SVG/Artboard 1.svg" alt="" style=" object-fit:fill; width: 60px;">
+            </div>
+            <a href="#" class="navbar-brand text-uppercase">Treasure Web</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+            <div class="collapse navbar-collapse" id="navbarToggler">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link " href="index.html">Home </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="event.html" class="nav-link">Events</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="rules.html" class="nav-link">Rules</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="profile.html" class="nav-link">Profile</a>
+                    </li>
+                    <li class="specialDropdown nav-item dropdown d-md-none">
+                        <a class="nav-link dropdown-toggle active" href="#" id="utilitiesDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Login/Signup
+                        </a>
+                        <div class="dropdown-menu mb-2 " aria-labelledby="utilitiesDropdown">
+                            <a class="dropdown-item" href="login.html">Login</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="signup.html">New around here? Sign up</a>
+                            <a class="dropdown-item" href="#">Forgot password?</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="dropdown mb-2 d-none d-md-inline pt-2">
+                <button class="btn btn-outline-light btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Login/Signup
+                    </button>
+                <div class="dropdown-menu dropdown-menu-right">
+                    <a class="dropdown-item" href="login.html">Login</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="signup.html">New around here? Sign up</a>
+                    <a class="dropdown-item" href="#">Forgot password?</a>
+                </div>
+            </div>
+        </div>
+        </div>
     </nav>
+    <!-- End of Nav Bar -->
+
+    <!-- Start of Content -->
     <main>
         <div class="center">
-            <h1>
+            <h1 class="text-light pt-3">
                 Login
             </h1>
             <form method="post">
-                <div class="txt_field">
-                    <input type="text" required>
+                <div class="txt_field text-white">
+                    <input class="text-light" type="text" required>
                     <span></span>
                     <label>Username</label>
                 </div>
                 <div class="txt_field">
-                    <input type="password" required>
+                    <input class="text-light" type="password" required>
                     <span></span>
                     <label>Password</label>
                 </div>
@@ -65,7 +86,7 @@
                     <a href=""> Forgot Password?</a>
                 </div>
                 <input type="submit" value="Login">
-                <div class="signup_link">
+                <div class="signup_link ">
                     Not a member? <a href="signup.html">Signup</a>
                 </div>
 
@@ -73,8 +94,27 @@
 
         </div>
     </main>
+    <!-- End of Content -->
 
 
+    <!-- Start of Footer -->
+    <!-- <footer class="bg-light p-3 pt-5 mt-0 ">
+        <ul class="list-inline text-uppercase text-center ">
+            <li class="list-inline-item mx-3 ">
+                <a href="Rules.html " class="text-danger ">Rules</a>
+            </li>
+            <li class="list-inline-item mx-3 ">
+                <a href="events.html " class="text-danger ">Events</a>
+            </li>
+        </ul>
+
+    </footer> -->
+    <!-- End of Footer -->
+
+    <!-- JS Scripts -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 
 </html>
